--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -619,7 +619,12 @@ pages={1-23}
 
 
 
-
+@article{sabrina942,
+           month = {June},
+           title = {Investigating expressiveness and understandability of hierarchy in declarative business process models},
+          author = {Stefan Zugal and Pnina Soffer and Cornelia Haisjackl and Jakob Pinggera and Manfred Reichert and Barbara Weber},
+            year = {2013},
+         journal = {Software \& Systems Modeling}}
 
 
 
