--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -4,11 +4,11 @@ In diesem Kapitel werden die Anforderungen an den in Kapitel 6 folgenden Verglei
 
 \section{Vergleichskriterien}\label{sec:chapter4:Vergleichskriterien}
 
-Bisher gibt es nur wenige Arbeiten, welche sich mit deklarativen Prozessmodellierungssprachen und insbesondere mit dem Vergleich von imperativen und deklarativen Prozessmodellierungssprachen beschäftigen. Aus diesem Grund soll in der vorliegenden Arbeit ein Vergleich zwischen deklarativen und imperativen Prozessmodellierungssprachen für Software-Engineering Prozessmodelle durchgeführt werden. Hierbei sollen die \textbf{Unterschiede und Ähnlichkeiten} der beiden Prozessmodellierungssprachen herausgearbeitet und deren \textbf{Eignung für die Modellierung von unterschiedlich großen Prozessmodellen} beurteilt werden. Weiterhin sollen die \textbf{Stärken und Grenzen} der beiden Modellierungssprachen aufgezeigt werden und es soll herausgefunden werden, ob eine der beiden Modellierungssprachen über eine bessere \textbf{Eignung zur Modellierung} verfügt als die andere \cite{list2006evaluation}.\newline
-Hierfür sollen die imperativen und deklarativen Prozessmodelle, welche für die drei Software-Engineering Prozessmodelle Scrum, Open Up und V-Modell-XT erstellt werden im Hinblick auf verschiedene Vergleichskriterien verglichen werden. Da es sich bei Scrum um ein leichtgewichtiges Software-Engineering Prozessmodell, beim V-Modell XT um ein schwergewichtiges Software-Engineering Prozessmodell und bei Open Up um ein Software-Engineering Prozessmodell handelt, welches sich in der Mitte zwischen leichtgewichtig und schwergewichtig befindet, eignen sich diese drei besonders gut, zum Vergleichen der imperativen und deklarativen Modellierung für unterschiedlich große Prozessmodelle. Außerdem liegen den in imperativer und deklarativer Modellierungssprache zu erstellenden Prozessmodellen so jeweils die gleichen Metamodelle zugrunde, was eine objektive Bewertung für den Vergleich gewährleistet \cite{list2006evaluation}.  
+Bisher gibt es nur wenige Arbeiten, welche sich mit deklarativen Prozessmodellierungssprachen und insbesondere mit dem Vergleich von imperativen und deklarativen Prozessmodellierungssprachen beschäftigen. Aus diesem Grund soll in der vorliegenden Arbeit ein Vergleich zwischen deklarativen und imperativen Prozessmodellierungssprachen im Kontext von Software-Engineering Prozessmodellen durchgeführt werden. Hierbei sollen die \textbf{Unterschiede und Ähnlichkeiten} der beiden Prozessmodellierungssprachen herausgearbeitet und deren \textbf{Eignung für die Modellierung von unterschiedlich großen Prozessmodellen} beurteilt werden. Weiterhin sollen die \textbf{Stärken und Grenzen} der beiden Modellierungssprachen aufgezeigt werden und es soll herausgefunden werden, ob eine der beiden Modellierungssprachen über eine bessere \textbf{Eignung zur Modellierung} verfügt als die andere \cite{list2006evaluation}.\newline
+Hierfür sollen die imperativen und deklarativen Prozessmodelle, welche für die drei Software-Engineering Prozessmodelle Scrum, Open Up und V-Modell-XT erstellt werden im Hinblick auf verschiedene Vergleichskriterien untersucht werden. Da es sich bei Scrum um ein leichtgewichtiges Software-Engineering Prozessmodell, beim V-Modell XT um ein schwergewichtiges Software-Engineering Prozessmodell und bei Open Up um ein Software-Engineering Prozessmodell handelt, welches sich in der Mitte zwischen leichtgewichtig und schwergewichtig befindet, eignen sich diese drei besonders gut, zum Vergleichen der imperativen und deklarativen Modellierung für unterschiedlich große Prozessmodelle. Außerdem liegen den in imperativer und deklarativer Modellierungssprache zu erstellenden Prozessmodellen so jeweils die gleichen Metamodelle zugrunde, was eine objektive Bewertung für den Vergleich gewährleistet \cite{list2006evaluation}.  
 
 \subsection{Erfüllung der Modellierungsgrundsätze}
-Zum einen sollen die imperativen und deklarativen Modellierungssprachen im Hinblick auf deren Erfüllung der in Kapitel 3.1.1 vorgestellten \textit{Grundsätze ordnungsgemäßer Modellierung} untersucht werden, da durch deren Einhaltung die Qualität, Klarheit und Konsistenz der Prozessmodelle gesichert wird \cite{freund2007}. Hierbei werden die jeweils mit deklarativer und imperativer Prozessmodellierungssprache erstellten Prozessmodelle auf \textit{Klarheit}, \textit{Richtigkeit}, \textit{Wirtschaftlichkeit}, \textit{Relevanz}, \textit{Vergleichbarkeit} und \textit{systematischen Aufbau} verglichen.
+Zum einen sollen die imperativen und deklarativen Modellierungssprachen im Hinblick auf deren Erfüllung der in Kapitel 3.1.1 vorgestellten \textit{Grundsätze ordnungsgemäßer Modellierung} untersucht werden, da durch deren Einhaltung die Qualität, Klarheit und Konsistenz der Prozessmodelle gesichert wird \cite{freund2007}. Hierbei werden die erstellten Prozessmodelle auf \textit{Klarheit}, \textit{Richtigkeit}, \textit{Wirtschaftlichkeit}, \textit{Relevanz}, \textit{Vergleichbarkeit} und \textit{systematischen Aufbau} verglichen.
 
 \subsubsection{Klarheit}
 Die Prozessmodelle, welche jeweils in imperativer und deklarativer Prozessmodellierungssprache erstellt werden, sollen im Hinblick auf ihre Klarheit untersucht werden. Hierbei soll festgestellt werden, ob es wesentliche Unterschiede bei der Verständlichkeit der Prozessmodelle gibt, wenn diese in imperativer, bzw. deklarativer Prozessmodellierungssprache erstellt wurden. Denn fehlende Verständlichkeit eines Prozessmodells führt dazu, dass das Prozessmodell wenig Nutzen bringt. Insbesondere soll hier auch die Anzahl an Verbindungen zwischen Aktivitäten verglichen werden, da sich diese mit steigender Anzahl negativ auf die Verständlichkeit auswirken.\newline
