--- a/Masterarbeit 4/Tex/masterarbeit.tex
+++ b/Masterarbeit 4/Tex/masterarbeit.tex
@@ -66,7 +66,9 @@ California, 94105, USA. \\ Satz: PDF-\LaTeXe
 \input{chapter5}
 \input{chapter6}
 \input{chapter7}
+\input{chapter9}
 \input{chapter8}
+
 
 
 
