--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -626,6 +626,13 @@ pages={1-23}
             year = {2013},
          journal = {Software \& Systems Modeling}}
 
+@Masterthesis{Menhorn2014,
+type={Bachelorarbeit},
+author={Nicole Menhhorn},
+title={Analyse und Überführung von Softwareentwicklungsprozessen in die standardisierte BPMN Notation},
+year={2014},
+school={Universität Ulm}}
+
 
 
 
