--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -634,6 +634,28 @@ year={2014},
 school={Universität Ulm}}
 
 
+@phdthesis{brunner2007fallstudie,
+  title={Fallstudie zur Modellierung von Software-Entwicklungsprozessen auf Basis des Software Process Engineering Metamodel 2.0},
+  author={Brunner, Maximilian},
+  year={2007},
+  school={Diplomarbeit, Lehrstuhl f{\"u}r Informatik 2, FAU}
+}
+
+@INPROCEEDINGS{software,
+AUTHOR = "Andre L. N. Campos and Toacy Cavalcante de Oliveira",
+TITLE = "Software Processes with BPMN: An Empirical Analysis",
+BOOKTITLE = "PROFES'13",
+PAGES = {338-341},
+YEAR = {2013}
+}
+
+@misc{Bregenzer2014,
+author={Bregenzer, Stefan},
+title={Projektdurchführungstrategie als strategisches Prozessmodell in BPMN},
+url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strategisches- prozessmodell-in-bpmn/},
+month={august},
+year={2014}}
+
 
 
 
