--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -3,7 +3,9 @@
 	title= {Geschäftsprozessanalyse: Ereignisgesteuerte Prozessketten und objektorientierte 			  Geschäftsprozessmodellierung für betriebswirtschaftliche Standardsoftware},
 	year= {2006},
 	tags= {Pattern; Software Engineering},
-	publisher= {Springer}
+	publisher= {Springer},
+	address = {Heidelberg}
+
 }
 
 @BOOK{koch2011,
@@ -11,7 +13,8 @@
 	title= {Einführung in das Management von Geschäftsprozessen},
 	year= {2011},
 	tags= {Pattern; Software Engineering},
-	publisher= {Springer}
+	publisher= {Springer},
+	address = {Heidelberg}
 }
 
 @BOOK{Stoerrle2005,
@@ -27,6 +30,7 @@
 	author = {Mishra, Jibitesh and Mohanty, Ashok},
 	title = {Software Engineering},
 	year = {2012},
+	tags= {Pattern; Software Engineering},
 	publisher = {Pearson Studium},
 	address = {New Delhi}
 }
@@ -35,6 +39,7 @@
 	author = {Kölmel, Bernhard},
 	title = {Softwareprozessverbesserungsprojekte},
 	year = {2000},
+	tags= {Pattern; Software Engineering},
 	publisher = {Books on Demand GmbH},
 	address = {Norderstedt}
 }
@@ -43,6 +48,7 @@
 	author = {Puntambekar, A.A.},
 	title = {Software Engineering},
 	year = {2007},
+	tags= {Pattern; Software Engineering},
 	publisher = {Technical Publications Pune},
 	address = {Pune}
 }
@@ -51,6 +57,7 @@
 	author = {Specker, Adrian},
 	title = {Kognitives Software Engineering},
 	year = {1998},
+	tags= {Pattern; Software Engineering},
 	publisher = {vdf Hochschulverlag AG},
 	address = {Zürich}
 }
@@ -59,18 +66,20 @@
 	author = {Doug, Bryan  and Booch, Grady},
 	title = {Software Engineering with ADA},
 	year = {1993},
+	tags= {Pattern; Software Engineering},
 	edition={3},
 	publisher = {Addison Wesley Pub Co Inc}
 	}
 		
 @article{ross1975software,
-	  title={Software engineering: process, principles, and goals},
   	  author={Ross, Douglas T and Goodenough, John B and Irvine, CA},
+	  title={Software engineering: process, principles, and goals},
+	   year={1975},
 	  journal={Computer},
  	  volume={8},
   	 number={5},
   	 pages={17--27},
-  	 year={1975},
+	 tags= {Pattern; Software Engineering},
   	 publisher={IEEE Comput. Soc.}
 }
 
@@ -79,20 +88,23 @@
 	author = {Hanser, Eckhart},
 	title = {Agile Prozesse},
 	year = {2010},
-	publisher= {Springer}
+	tags= {Pattern; Software Engineering},
+	publisher= {Springer},
+	address={Heidelberg}
 	
 }
 	
 @article{Hesse2008,
+	author={Hesse, Wolfgang and Mayr, Heinrich C.},
+	title={Modellierung in der Softwaretechnik: eine Bestandsaufnahme},
 	year={2008},
 	journal={Informatik-Spektrum},
 	volume={31},
 	number={5},
-	title={Modellierung in der Softwaretechnik: eine Bestandsaufnahme},
-	url={http://dx.doi.org/10.1007/s00287-008-0276-7},
-	publisher={Springer-Verlag},
-	author={Hesse, Wolfgang and Mayr, Heinrich C.},
-	pages={377-393}
+	pages={377-393},
+	 tags= {Pattern; Software Engineering},
+	publisher={Springer},
+	address={Heidelberg}
 }
 
 
@@ -100,6 +112,7 @@
 	author = {Grechenig, Thomas  and Bernhart, Mario and Breiteneder, Roland and Kappel, Karin},
 	title = {Softwaretechnik},
 	year = {2010},
+	 tags= {Pattern; Software Engineering},
 	publisher = {Pearson Studium},
 	address = {München}
 	
@@ -107,74 +120,74 @@
 	
 	
 @MISC{Boehm81,
-   	author = {Barry W. Boehm},
+   	author = {Boehm, Barry W. },
     	title = {Software Engineering Economics},
-    	year = {1981}
+    	year = {1981},
+	tags= {Pattern; Software Engineering}
 }
 
 @BOOK{Schwaber2004,
 	author = {Schwaber, Ken},
 	title = {Agile Project Management with Scrum},
 	year = {2004},
+	 tags= {Pattern; Software Engineering},
 	publisher = {Microsoft Press},
 	address = {MRedmond}	
 }
 
 @book {Henning2011,
 	author = {Wolf, Henning},
-	editor = {Solingen, Rini van and Rustenburg, Eelco and Solingen, Rini van and Rustenburg, 		Eelco},
 	title = {Die Kraft von Scrum: eine inspirierende Geschichte über einen revolutionären 
 		 Projektmanagementansatz},
-	address = {München},
 	year = {2011},
+	 tags= {Pattern; Software Engineering},
 	publisher = {Addison-Wesley},
-	URL = {http://proquest.tech.safaribooksonline.de/9783827330529},
-	type = {Text (nur für elektronische Ressourcen)}
+	address = {München}
 }
 
 @book {Pries2011,
 	author = {Pries, Kim H. and Quigley, Jon M.},
 	title = {Scrum project management},
-	address = {Boca Raton, Fla. [u.a.]},
 	year = {2011},
-	publisher = {Woodhead Publishing Limited},
-	URL = {http://www.gbv.de/dms/tib-ub-hannover/630278210.pdf}
+	 tags= {Pattern; Software Engineering},
+	address = {Boca Raton, Fla. [u.a.]},
+	publisher = {Woodhead Publishing Limited}
 }
 
 @book {Lacey2012,
 	author = {Lacey, Mitch},
 	title = {The Scrum field guide: practical advice for your first year},
-	address = {[S.l.]},
 	year = {2012},
+	tags= {Pattern; Software Engineering},
 	publisher = {Addison-Wesley Professional},
-	URL = {http://proquest.tech.safaribooksonline.de/9780321670380},
-	edition = {1st ed}
+	address = {[S.l.]}
 	
 }
 
 @book {Keith2010,
 	author = {Keith, Clinton},
 	title = {Agile game development with Scrum: Description based on print version record},
-	address = {Upper Saddle River, N.J.},
 	year = {2010},
+	tags= {Pattern; Software Engineering},
 	publisher = {Addison-Wesley},
-	URL = {http://proquest.tech.safaribooksonline.de/9780321670311}
+	address = {Upper Saddle River, N.J.}
 }
 
 @book {Pichler2010,
 	author = {Pichler, Roman},
 	title = {Agile product management with Scrum: creating products that customers love. - 
 	Description based on print version record},
-	address = {Upper Saddle River, N.J.},
 	year = {2010},
+	tags= {Pattern; Software Engineering},
 	publisher = {Addison-Wesley},
-	URL = {http://proquest.tech.safaribooksonline.de/9780321684165}
+	address = {Upper Saddle River, N.J.}
 }
 
 @book {Schwaber2007,
 	author = {Schwaber, Ken},
 	title = {The enterprise and Scrum},
 	year = {2007},
+	tags= {Pattern; Software Engineering},
 	publisher = {Microsoft Press},
 	address = {MRedmond}
 
@@ -182,34 +195,29 @@
 
 @book {Wolf2011,
 	author = {Wolf, Henning},
-	editor = {Solingen, Rini van and Rustenburg, Eelco and Solingen, Rini van and Rustenburg,
-	 Eelco},
 	title = {Die Kraft von Scrum: eine inspirierende Geschichte über einen revolutionären 
 	Projektmanagementansatz},
-	address = {München},
 	year = {2011},
+	tags= {Pattern; Software Engineering},
 	publisher = {Addison-Wesley},
-	URL = {http://proquest.tech.safaribooksonline.de/9783827330529}
+	address = {München}
 }
 
 @book {Pham2012,
 	author = {Pham, Andrew},
-	editor = {Pham, Phuong-Van},
 	title = {Scrum in action: agile software project management and development},
-	address = {Boston, Mass.},
 	year = {2012},
+	tags= {Pattern; Software Engineering},
 	publisher = {Course Technology},
-	URL = {http://proquest.tech.safaribooksonline.de/9781435459137}
-	
+	address = {Boston, Mass.}	
 }
 
 @article{Takeuchi1986,
 	  author = {Takeuchi, Hirotaka and Nonaka, Ikujiro},
-  	  biburl = {http://www.bibsonomy.org/bibtex/21b2674f52f10eee8a8df1d71b4bcf84d/cschenk},
   	  journal = {Harvard Business Review},
   	  title = {The New New Product Development Game},
-  	  url = {http://apln-richmond.pbwiki.com/f/New%20New%20Prod%20Devel%20Game.pdf},
- 	 year = {1986}
+ 	  year = {1986},
+	  tags= {Pattern; Software Engineering}
 }
 
 @misc{scrum2008, 
@@ -227,40 +235,47 @@
   author={Friedrich,Jan  and Hammerschall,Ulrike  and Kuhrmann, Marco  and Sihling, Marc},
   series={Informatik im Fokus},
   year={2008},
-  publisher={Springer}
+  tags= {Pattern; Software Engineering},
+  publisher={Springer},
+  address={Heidelberg}
 }
 
 @inproceedings{Kuhrmann2011,
-	  author = {Kuhrmann, Marco and Lange, Christian and Schnackenburg, André},
   	  booktitle = {EuroSPI},
+	  author = {Kuhrmann, Marco and Lange, Christian and Schnackenburg, André},
 	  editor = {O'Connor, Rory and Pries-Heje, Jan and Messnarz, Richard},
  	 pages = {49-60},
+	 year={2011},
+	tags= {Pattern; Software Engineering},
   	publisher = {Springer},
-	year={2011},
-	  series = {Communications in Computer and Information Science}
+	address={Heidelberg}
 	  }
 	  
  @book{Zoerner2012,
   title={Software-Architekturen Dokumentieren und Kommunizieren},
   author={Stefan Zörner},
   year={2012},
+  tags= {Pattern; Software Engineering},
+   booktitle = {EuroSPI},
   publisher={Carl Hanser Verlag},
   adress={München}
 }
 
 
 @proceedings{Wang2007,
-  editor    = {Qing Wang and
-               Dietmar Pfahl and
-               David M. Raffo},
   title     = {Software Process Dynamics and Agility, International Conference
                on Software Process, ICSP 2007, Minneapolis, MN, USA, May
                19-20, 2007, Proceedings},
-  booktitle = {ICSP},
-  publisher = {Springer},
+ editor    = {Qing Wang and
+               Dietmar Pfahl and
+               David M. Raffo},
   series    = {Lecture Notes in Computer Science},
   volume    = {4470},
-  year      = {2007}
+  year      = {2007},
+  tags= {Pattern; Software Engineering},
+  publisher = {Springer},
+  address={Heidelberg}
+
 }
 
 @article{hauber2010,
