--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -62,7 +62,7 @@ Die BPMN-Elemente lassen sich anhand der fünf Kategorien \textit{Flussobjekte},
 
 \begin{figure}[htp]
 \begin{center}
-  \includegraphics[width=\linewidth]{BPMN} %pdf, jpg, png...
+  \includegraphics[scale=0.6]{BPMN} %pdf, jpg, png...
   \caption{BPMN-Elemente Übersicht nach \cite{gpfert2012}}
   \label{fig:BPMN}
 \end{center}
@@ -76,7 +76,7 @@ Mit Hilfe von \textit{Gateways} lässt sich der Prozessablauf kontrollieren und 
 
 \begin{figure}[H]
 \begin{center}
-  \includegraphics[scale=0.8]{gates} %pdf, jpg, png...
+  \includegraphics[scale=0.3]{gates} %pdf, jpg, png...
   \caption{BPMN-Gateways}
   \label{fig:gates}
 \end{center}
