--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -635,6 +635,7 @@ Abbildung \ref{fig:IterationPlanenExcel} kann die Anzahl der Elemente, welche je
 \end{center}
 \end{figure}
 
+In Abbildung \ref{fig:AnforderungenIdentifizierenExcel} sind die Anzahl der Elemente zur Darstellung von Anforderungen identifizieren und verfeinern abgebildet. Demanch werden sowohl in BPMN, als auch in ConDec jeweils 11 Akivitäten benötigt. Weiterhin sind keine Gateways und 15 Sequenzflusselemente in BPMN zur Darstellung nötig. In ConDec werden 21 Constraints verwendet, aber nur zwei verschiedene. Insgesamt werden zur korrekten Abbildung des Metamodells in BPMN 26 Elemente und in ConDec 32 Elemente benötigt.\newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -644,6 +645,7 @@ Abbildung \ref{fig:IterationPlanenExcel} kann die Anzahl der Elemente, welche je
 \end{center}
 \end{figure}
 
+Die Anzahl der Elemente zur Darstellung des Prozesses Produktdokumentation entwickeln kann Abbildung \ref{fig:ProduktdokumentationExcel} entnommen werden. Es werden somit jeweils vier Aktivitäten zur Darstellung benötigt. Weiterhin werden in BPMN keine Gateways und sieben Sequenzflusselemente verwendet. In ConDec sind zur Darstellung sieben Constraints notwendig, jedoch keine unterschiedlichen Constraints. Insgesamt werden in BPMN neun Elemente und in ConDec 11 Elemente verwendet.\newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -653,6 +655,7 @@ Abbildung \ref{fig:IterationPlanenExcel} kann die Anzahl der Elemente, welche je
 \end{center}
 \end{figure}
 
+Wie viele Elemente zur Modellierung des Prozesses Release deployen benötigt werden, ist in Abbildung \ref{fig:ReleaseDeployenExcel} aufgeführt. Jeweils fünf Aktivitäten werden in BPMN und ConDec verwendet. In BPMN sind zwei Gateways und neun Sequenzflusselemente zur Darstellung des Ablaufes notwendig. In ConDec werden hierfür 11 Constraints benötigt. In BPMN werden zwei verschiedene Gateways und drei verschiedene Constraints verwendet. Somit sind insgesamt 16 Elemente in BPMN und 16 Elemente in ConDec zur darstellung notwendig. \newline
 \begin{figure}[htp]
 \begin{center}
   \includegraphics[scale=0.6]{ReleaseDeployenExcel} %pdf, jpg, png...
@@ -937,6 +940,8 @@ Danach werden noch die Aktivitäten \textit{QS-Bericht erstellen}und \textit{Pro
 \subsection{Vergleich}
 
 
+Abbildung \ref{fig:SystementwicklungsprojektExcel} zeigt die Zahl notwendigen Elemente zur Darstellung des Prozesses Systementwicklungsprojekt AG/AN. In ConDec (11 Aktivitäten)  ist somit einer Aktivität mehr zur Darstellung nötig als in BPMN (10 Aktivitäten). In BPMN werden vier Gateways und 20 Sequenzflusselemente verwendet. In ConDec hingegen werden 15 Constraints benötigt. Somit ergeben sich in BPMN insgesamt 24 Verbindungselemente und in ConDec 15. In ConDec werden acht unterschiedliche Constraints im Modell verwendet, in BPMN zwei. Somit sind zur Darstellung des Sachverhaltes insgesamt 34 BPMN Elemente 26 ConDec Elemente notwendig.\newline
+
 \begin{figure}[!htbp]
 \begin{center}
   \includegraphics[scale=0.6]{SystementwicklungsprojektExcel} %pdf, jpg, png...
@@ -945,6 +950,7 @@ Danach werden noch die Aktivitäten \textit{QS-Bericht erstellen}und \textit{Pro
 \end{center}
 \end{figure}
 
+Die Anzahl der Elemente zur Darstellung des Prozess Inkrementelle Entwicklung kann Abbildung \ref{fig:InkrementellExcel} entnommen werden.
 
 \begin{figure}[!htbp]
 \begin{center}
